# tournament-ark

./: .gitignore  fedora_deps.txt  package.json
src/: App.css  App.tsx  models.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2021-07-08-063710_create_base_tables/: down.sql  up.sql
src-tauri/src/: main.rs  models.rs  schema.rs
src/components/: app-side-bar.tsx  page-create-open.tsx  page-home.tsx  page-list-categories.tsx  page-list-entries.tsx  page-list-entry-cards.tsx  page-main.tsx  page-new-entry.tsx  person-select.tsx
src/machines/: fileMachine.ts  newEntryMachine.ts  pageMachine.ts
